--- a/UX-UI_Design/02_UX 유저 리서치.md
+++ b/UX-UI_Design/02_UX 유저 리서치.md
@@ -6,3 +6,51 @@
 > 가상의 사용자지만 실제 사용자들로부터 얻은 데이터를 기반으로 모델링되어야함
 > 
 > 
+
+### 퍼소나 모델링
+> **사용자 세분화(User Segmentation)** 에서 시작
+> - 린 캔버스에서 작성한 얼리 어답터를 기반으로 사용자의 목적, 불만 사항, 원하는 것 등을 작성
+> - X, Y축으로 나눠 사용자 세분화 (그래프화)
+>
+> **사진(Photo)**
+> - 퍼소나에 생명을 부여하는 첫 번째 작업
+> - 자연스러운 일상 사진을 넣는 것이 좋음
+> - 유명인이나 연예인 사진은 피해야 함
+>
+> **이름(Name)**
+> - 퍼소나에 넣은 사진을 부르기 위한 이름
+> - 기억하기 쉽고 부르기 쉬운 이름을 택하는 것이 좋음
+> - 다수의 퍼소나 작성 시 서로 구분이 명확해야 함
+> - 유명인이나 연예인 사진은 피해야 함
+>
+> ** 직업(Job)**
+> - 직업을 통해 하루의 일상 패턴 파악 가능
+> - 퍼소나의 목적, 불만 사항, 원하는 것 등이 성별이나 나이와 크게 관련이 없으면 굳이 작성하지 않아도 됨
+>
+> **전기(Who am I?)**
+> - 실제 이야기처럼 재구성하여 듣는 사람이 고개를 끄덕일 수 있는 전기
+> - 추후 리서치 데이터를 바탕으로 '진짜 사용자의 이야기'로 업데이트해야함
+>
+> **제품 사용 이유(Reason for me to engage with you)**
+> - 퍼소나가 제품을 사용하는 이유
+>
+> **제품 사용을 꺼려하는 이유(Reason for me not to engage with you)**
+> - 추가적인 노력이 필요해서 포기하는 경우
+> - 다른 어려움이 있거나 충분한 대안이 있는 경우
+>
+> **관심사(My interests)**
+> - 퍼소나와 우리 제품의 접점이 되는 관심사
+> - 제품에 대한 태도를 확인할 수 있는 관심사
+>
+> **사고방식(My personality)**
+> - 퍼소나의 삶의 모토나 성향 등을 작성
+> - 문장으로도 작성 가능하나 다이어그램 등으로 표현
+>
+> **숙련도(My skills)**
+> - 퍼소나가 제품응 얼마나 활용할 수 있는지 작성
+>
+> **목표(My dreams)**
+> - 퍼소나가 제품을 사용함으로써 궁극적으로 달성하고자 하는 것
+> - 이를 통해 제품 사용에 대한 동기를 확인 가능
+>
+> ****
